Make height bars go behind entities. Fix bars not appearing for freshly-added entities
This also probably fixes bugs with wrong z-indexing for fresh entities

--- a/macrovision.css
+++ b/macrovision.css
@@ -468,6 +468,7 @@ body.toggle-height-bars .height-bar {
     top: calc(-100% + var(--extra));
     left: calc(-1 * var(--xpos));
     transition: 0s all;
+    z-index: -1;
 }
 
 .height-bar::before {
